--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,8 @@
 version: 2 # use CircleCI 2.0
 jobs:
-  - run: "Hello world!"
+  build:
+    steps:
+      - run: 
+        name: Test
+        command: |
+          echo Hello world!
