--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2 # use CircleCI 2.0
 jobs:
   build:
+    machine:
+      image: ubuntu-1604:201903-01
     steps:
       - run: 
         name: Test
