--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,5 +4,5 @@ jobs:
         machine:
             image: ubuntu-1604:201903-01
         steps:
-            - run: sleep 10
             - run: echo Hello!
+            - run: return 1
